# gamebox

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.c
core/: CMakeLists.txt  bus.c  bus.h  cpu.c  cpu.h  device.c  device.h  gamebox.c  mbc.c  mbc.h  ppu.c  ppu.h
hal/linux/: CMakeLists.txt  fs.c  linux.c
include/gamebox/: core.h  gamebox.h  hal.h
